# simplepir-rs

./: Cargo.toml  README.md
src/: lib.rs  matrix.rs
