[package]
name = "simplepir"
version = "1.0.2"
edition = "2021"
authors = ["Matty Harris <matty@mattyharris.net>", "Bhargav Annem <bhargav.annem@gmail.com>"]
rust-version = "1.80.0"
description = "A fast and efficient implementation of SimplePIR in Rust."
repository = "https://github.com/0xWOLAND/simplepir-rs"
license = "MIT"
keywords = ["cryptography"]
categories = ["cryptography"]

[badges]
maintenance = { status = "passively-maintained" }

[profile.dev]
# Disable integer overflow checks.
overflow-checks = false

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
thiserror = "1.0.63"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "simplepir_benchmark"
harness = false

