[package]
name = "simplepir"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
thiserror = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "simplepir_benchmark"
harness = false

